--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <div id="test">
+            Hello world. <br />This is my first website.
+        </div>
+    </body>
+</html>
+
